# stream_data_producer

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  pytest.ini  setup.py
examples/: README.md  ecommerce_order_processing.yaml  financial_trading_monitor.yaml  healthcare_monitoring.yaml  logistics_transport_tracking.yaml  ship_telemetry_basic.yaml  ship_telemetry_with_keys.yaml  social_media_analytics.yaml
stream_data_producer/: __init__.py  cli.py
stream_data_producer/api/: __init__.py  simple_server.py
stream_data_producer/core/: __init__.py  config.py  dictionary.py  generator.py  rate_controller.py  single_producer.py
stream_data_producer/output/: kafka.py
stream_data_producer/utils/: error_logger.py
tests/: __init__.py  conftest.py  test_examples.py  test_integration.py
tests/unit/: test_cli.py  test_config.py  test_dictionary.py  test_generator.py  test_kafka_key.py  test_output.py  test_rate_controller.py  test_simple_api.py  test_utils.py
